fix utility nav alignment

--- a/resources/styles/molecules/navigation/index.scss
+++ b/resources/styles/molecules/navigation/index.scss
@@ -6,6 +6,7 @@
     display: grid;
     grid-auto-flow: column;
     place-content: end space-between;
+    place-items: center;
   }
 
   &__link,
